cmake_minimum_required(VERSION 3.16)
project(MicroVectorEditor)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
list(APPEND CMAKE_PREFIX_PATH "/opt/homebrew/Cellar/qt/6.10.1")
find_package(Qt6 COMPONENTS Widgets REQUIRED)
file(GLOB SOURCES "src/*.cpp")
file(GLOB_RECURSE HEADERS "src/*.h")
add_executable(vector_editor ${SOURCES} ${HEADERS})
target_link_libraries(vector_editor PRIVATE Qt6::Widgets)